Расширение типа Organization, англ. язык, фиксы

--- a/language/en-GB/en-GB.pkg_radicalmicro.sys.ini
+++ b/language/en-GB/en-GB.pkg_radicalmicro.sys.ini
@@ -5,7 +5,7 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PKG_RADICALMICRO = "RadicalMicro"
+PKG_RADICALMICRO = "Microdata RadicalMicro"
 PKG_RADICALMICRO_DESCRIPTION = "RadicalMicro it is free plugin for metadata and microdata for site."
 
 PKG_RADICALMICRO_ERROR_COMPATIBLE_PHP = "This version is compatible only with PHP %s and later."
