--- a/language/ru-RU/ru-RU.pkg_radicalmicro.sys.ini
+++ b/language/ru-RU/ru-RU.pkg_radicalmicro.sys.ini
@@ -5,7 +5,7 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PKG_RADICALMICRO = "RadicalMicro"
+PKG_RADICALMICRO = "Микроразметка RadicalMicro"
 PKG_RADICALMICRO_DESCRIPTION = "RadicalMicro - решение, позволяющее добавить микроразметку и метаданные."
 
 PKG_RADICALMICRO_ERROR_COMPATIBLE_PHP = "Данная версия совместима только с PHP %s и более поздними версиями."
