--- a/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.ini
@@ -5,4 +5,57 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_RADICALMICRO_CONTENT = "Radical Micro - Content"
+PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Radical Micro Content Plugin Extension"
+
+; params
+
+PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA = "Schema.org Fields"
+PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA_DESC = "These fields are used for Schema.org markup. To get a list of fields, select the Schema.org type and save the settings. Then map the fields that appear."
+PLG_CONTENT_RADICALMICRO_PARAM_SPACER_META = "Meta Fields"
+PLG_CONTENT_RADICALMICRO_PARAM_SPACER_META_DESC = "These fields are used for Meta markup. Map the fields and fill in the required fields."
+PLG_CONTENT_RADICALMICRO_PARAM_TYPE = "Schema.org Type"
+
+; Dynamic params
+
+PLG_RADICALMICRO_PARAM_SCHEMA_TITLE = "Title"
+PLG_RADICALMICRO_PARAM_SCHEMA_DESCRIPTION = "Description"
+PLG_RADICALMICRO_PARAM_SCHEMA_IMAGE = "Image"
+PLG_RADICALMICRO_PARAM_SCHEMA_DATEPUBLISHED = "Publication Date"
+PLG_RADICALMICRO_PARAM_SCHEMA_DATEMODIFIED = "Date Modified"
+PLG_RADICALMICRO_PARAM_SCHEMA_AUTHOR = "Author"
+
+; product
+
+PLG_RADICALMICRO_PARAM_SCHEMA_SKU = "SKU"
+PLG_RADICALMICRO_PARAM_SCHEMA_MPN = "Manufacturer Code"
+PLG_RADICALMICRO_PARAM_SCHEMA_BRAND = "Manufacturer"
+PLG_RADICALMICRO_PARAM_SCHEMA_PRICE = "Price"
+PLG_RADICALMICRO_PARAM_SCHEMA_CURRENCY = "Currency"
+
+; recipe
+
+PLG_RADICALMICRO_PARAM_SCHEMA_PREPTIME = "Prep time min."
+PLG_RADICALMICRO_PARAM_SCHEMA_COOKTIME = "Cooking time, min."
+PLG_RADICALMICRO_PARAM_SCHEMA_TOTALTIME = "Total time, min."
+PLG_RADICALMICRO_PARAM_SCHEMA_CALORIES = "Calories"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECATEGORY = "Dish Type"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEYIELD = "Number of servings"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECUISINE = "World Cuisine View"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINSTRUCTIONS = "Instruction"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINGREDIENT = "Ingredients"
+
+; Meta
+
+PLG_RADICALMICRO_PARAM_META_TITLE = "Title"
+PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Description"
+PLG_RADICALMICRO_PARAM_META_IMAGE = "Image"
+PLG_RADICALMICRO_PARAM_META_TYPE = "Content Type"
+PLG_RADICALMICRO_PARAM_META_SITE = "Site Address"
+
+; Groups
+
+PLG_RADICALMICRO_CONTENT_GROUP_CONTENT = "Content"
+PLG_RADICALMICRO_CONTENT_GROUP_EXTRA = "Extra"
+PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_NO_SELECT = "Not selected"
+PLG_RADICALMICRO_CONTENT_GROUP_FIELDS = "Content Fields"
