--- a/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.sys.ini
+++ b/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.sys.ini
@@ -5,4 +5,5 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_RADICALMICRO_CONTENT = "Radical Micro - Content"
+PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Radical Micro Content Plugin Extension"
