--- a/plg_radicalmicro_default/language/en-GB/en-GB.plg_radicalmicro_default.ini
+++ b/plg_radicalmicro_default/language/en-GB/en-GB.plg_radicalmicro_default.ini
@@ -5,4 +5,18 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_RADICALMICRO_DEFAULT = "Radical Micro - Defaults"
+PLG_RADICALMICRO_DEFAULT_DESCRIPTION = "Extension of the Radical Micro plugin to set the default values of some parts of the metadata.<br/> The plugin substitutes default values on those pages where data from other plugin providers does not go, or they are empty.<br/>The plugin substitutes data in the section Plugin Meta."
+
+; params
+
+PLG_RADICALMICRO_DEFAULT_PARAM_TITLE = "Title"
+PLG_RADICALMICRO_DEFAULT_PARAM_TITLE_VALUE = "Title Tag"
+PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION = "Description"
+PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION_NONE = "Don't Use"
+PLG_RADICALMICRO_DEFAULT_PARAM_DESCRIPTION_PAGE = "Description Tag"
+PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE = "Image"
+PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_NONE = "Don't Use"
+PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_STATIC = "Static Image"
+PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE_CHOICE_BODY = "First Image"
+PLG_RADICALMICRO_DEFAULT_PARAM_IMAGE = "Static Image"
