--- a/plg_radicalmicro_default/language/en-GB/en-GB.plg_radicalmicro_default.sys.ini
+++ b/plg_radicalmicro_default/language/en-GB/en-GB.plg_radicalmicro_default.sys.ini
@@ -5,4 +5,5 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_RADICALMICRO_DEFAULT = "Radical Micro - Defaults"
+PLG_RADICALMICRO_DEFAULT_DESCRIPTION = "Extension of the Radical Micro plugin to set the default values of some parts of the metadata.<br/> The plugin substitutes default values on those pages where data from other plugin providers does not go, or they are empty.<br/>The plugin substitutes data in the section Plugin Meta."
