--- a/plg_radicalmicro_image/language/en-GB/en-GB.plg_radicalmicro_image.ini
+++ b/plg_radicalmicro_image/language/en-GB/en-GB.plg_radicalmicro_image.ini
@@ -5,4 +5,38 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_RADICALMICRO_IMAGE = "Radical Micro - Image Generation"
+PLG_RADICALMICRO_IMAGE_DESCRIPTION = "Radical Micro Image Generation Plugin Extension"
+
+; params
+
+PLG_RADICALMICRO_IMAGE_PARAM_SPACER_IMAGE = "Image Settings"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE = "Fixed Image Size"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE_WIDTH = "Width"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE_HEIGHT = "Height"
+PLG_RADICALMICRO_IMAGE_PARAM_POSITION = "Header Location"
+PLG_RADICALMICRO_IMAGE_PARAM_POSITION_TOP = "Top"
+PLG_RADICALMICRO_IMAGE_PARAM_POSITION_MIDDLE = "Middle"
+PLG_RADICALMICRO_IMAGE_PARAM_POSITION_BOTTOM = "Bottom"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE = "Image Folder"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_DESC = "Select the folder where the generated images will be stored. The difference is that the Cache folder can be cleared from the admin area along with the entire cache."
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_IMAGES = "Images"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_CACHE = "Cache"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_SUBFOLDER = "Add Subfolders"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_SUBFOLDER_DESC = "Add subfolders to the image cache folder to reduce server load when generating a lot of images"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGE_FOR_ERROR = "Default"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGE_FOR_ERROR_DESC = "A default image will be shown when for some reason an image has not been generated"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND = "Image Background"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_COLOR = "Background Color"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_FILL = "Fill"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_WIDTH = "Image Width"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_HEIGHT = "Image Height"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_STATIC = "Image"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_IMAGE = "Background Image"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_BACKGROUND = "Text Background Color"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_COLOR = "Text Color"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_FONT = "Font (ttf)"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_FONT_DESC = "Path to ttf file to override default font"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_FONT_SIZE = "Font Size"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_MARGIN = "Text Block Margin"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_PADDING = "Text Block Padding"
