--- a/plg_radicalmicro_image/language/en-GB/en-GB.plg_radicalmicro_image.sys.ini
+++ b/plg_radicalmicro_image/language/en-GB/en-GB.plg_radicalmicro_image.sys.ini
@@ -5,4 +5,5 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_RADICALMICRO_IMAGE = "Radical Micro - Image Generation"
+PLG_RADICALMICRO_IMAGE_DESCRIPTION = "Radical Micro Image Generation Plugin Extension"
