--- a/plg_radicalmicro_menu/language/en-GB/en-GB.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/en-GB/en-GB.plg_radicalmicro_menu.ini
@@ -1,5 +1,59 @@
-;
-; PlgRadicalMicroContent language file
-;
+; @package   pkg_radicalmicro
+; @version   1.0.0
+; @author    Dmitriy Vasyukov - https://fictionlabs.ru
+; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
+; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_RADICALMICRO_MENU = "Radical Micro - Menu"
+PLG_RADICALMICRO_MENU_DESCRIPTION = "Radical Micro Menu Item Plugin Extension"
+
+; params
+
+PLG_RADICALMICRO_MENU_PARAM_ENABLE = "Enable"
+PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC = "By enabling this option, you can override the data that comes from provider plugins. Menu items take precedence over provider plugins."
+
+; Meta
+
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TITLE = "Title"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_DESCRIPTION = "Description"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_IMAGE = "Image"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TYPE = "Type "
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_SITE = "Site"
+
+; schema
+
+PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER = "Schema.org Fields"
+PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER_DESC = "These fields are used for Schema.org layout. To get a list of fields, select the Schema.org type and save the settings. Then fill in the appropriate fields."
+PLG_RADICALMICRO_MENU_PARAM_SCHEMA_TYPE = "Schema.org Type"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_TITLE = "Title"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_DESCRIPTION = "Description"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_IMAGE = "Image"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_DATEPUBLISHED = "Publication Date"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_DATEMODIFIED = "Date Modified"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_AUTHOR = "Author"
+
+; product
+
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_SKU = "SKU"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_MPN = "Manufacturer Code"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_BRAND = "Manufacturer"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_PRICE = "Price"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_CURRENCY = "Currency"
+
+; recipe
+
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_PREPTIME = "Prep time min."
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_COOKTIME = "Cooking time, min."
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_TOTALTIME = "Total time min."
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_CALORIES = "Calories"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPECATEGORY = "Dish Type"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPEYIELD = "Number of Servings"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPECUISINE = "World Cuisine View"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPEINSTRUCTIONS = "Instruction"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPEINGREDIENT = "Ingredients"
+
+; Other
+
+COM_MENUS_RADICALMICRO_META_FIELDSET_LABEL = "RadicalMicro - Meta"
+COM_MENUS_RADICALMICRO_SCHEMA_FIELDSET_LABEL = "RadicalMicro - Schema.org"
