--- a/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
@@ -1,6 +1,9 @@
-;
-; PlgRadicalMicroMenu language file
-;
+; @package   pkg_radicalmicro
+; @version   1.0.0
+; @author    Dmitriy Vasyukov - https://fictionlabs.ru
+; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
+; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+; @link      https://fictionlabs.ru/
 
 PLG_RADICALMICRO_MENU = "Radical Micro - Меню"
 PLG_RADICALMICRO_MENU_DESCRIPTION = "Расширение плагина Radical Micro для работы с пунктами меню"
