--- a/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.ini
@@ -5,4 +5,69 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_SYSTEM_RADICALMICRO = "System - Microdata Radical Micro"
+PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>Radical Micro is a general purpose microdata plugin.</p>"
+
+; Fieldsets
+
+COM_PLUGINS_SCHEMA_FIELDSET_LABEL = "Schema.org"
+COM_PLUGINS_META_FIELDSET_LABEL = "Meta"
+COM_PLUGINS_EXTRA_FIELDSET_LABEL = "Extra"
+
+; Basic
+
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA = "Schema.org"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_DESC = "Enable Adding Schema.org Markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_META = "Meta"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_META_DESC = "Enable Meta Tags"
+
+; schema
+
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE = "Website Markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE_DESC = "Add Schema.org markup of type Website in addition to existing markups"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_ORGANIZATION = "Organization Markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_ORGANIZATION_DESC = "Add Schema.org markup of type Organization in addition to existing markups"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE = "Logo"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE_DESC = "Logo for organization markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE = "Title"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE_DESC = "Title for Organization layout"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY = "Country"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY_DESC = "Country for Organization layout"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY = "City"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY_DESC = "City for Organization layout"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_REGION = "State/Region"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_REGION_DESC = "State/Region for Organization layout"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_ADDRESS = "Address"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_ADDRESS_DESC = "Address for Organization markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_CODE = "Index"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_CODE_DESC = "Index for Organization layout"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_POST = "Mailbox"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_POST_DESC = "Organization Layout Mailbox"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_MAP = "Map Link"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_MAP_DESC = "Map Link for Organization Markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_BREADCRUMBLIST = "Breadcrumb List Markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_BREADCRUMBLIST_DESC = "Add Breadcrumb List Schema.org markup in addition to existing markups"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE = "Basic Markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE_DESC = "Add basic page layout in addition to existing layouts"
+
+; open graph
+
+PLG_RADICALMICRO_PARAM_META_ENABLE_OG = "OpenGraph Markup"
+PLG_RADICALMICRO_PARAM_META_ENABLE_DESC = "Add OpenGraph markup to existing markups"
+PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER = "Twitter markup"
+PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER_DESC = "Add Twitter Layout in addition to existing Layouts"
+
+; Other
+
+PLG_SYSTEM_RADICALMICRO_PLUGIN_DISABLED = "Enable the Radical Micro plugin to continue working"
+PLG_SYSTEM_RADICALMICRO_NO_USER = "Author Unknown"
+PLG_SYSTEM_RADICALMICRO_BREADCRUMBS_HOME = "Home"
+
+; Extra
+
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_CHECK_CURRENT = "Check Markup"
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_CHECK_CURRENT_DESC = "If set to Yes, the plugin will not embed markup if the same type of markup is already on the page."
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE = "Insert Place"
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_DESC = "Where to insert the Schema.org and Meta markup. Selecting Head will insert the markup before the closing <head> tag, selecting Body will insert it before the closing <body> tag."
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_HEAD = "Head"
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_BODY = "Body"
