--- a/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.sys.ini
+++ b/plg_system_radicalmicro/language/en-GB/en-GB.plg_system_radicalmicro.sys.ini
@@ -5,4 +5,5 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_SYSTEM_RADICALMICRO = "System - Radical Micro"
+PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>Radical Micro is a general purpose microdata plugin.</p>"
