--- a/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.sys.ini
+++ b/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.sys.ini
@@ -5,5 +5,5 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PLG_SYSTEM_RADICALMICRO = "Система - Radical Micro"
+PLG_SYSTEM_RADICALMICRO = "Система - Микроразметка Radical Micro"
 PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>Radical Micro - универсальный плагин микроразметки.</p>"
