Added en-GB translation

--- a/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.ini
+++ b/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.ini
@@ -5,4 +5,10 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_SYSTEM_RADICALMICRO_YOOTHEME = "System - Radical Micro - YOOtheme Pro"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>RadicalMicro YOOtheme Pro - Markup plugin for YOOtheme Pro.</p>"
+
+; Text
+
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_TYPE = "Type"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_SETTINGS = "Settings"
