--- a/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.sys.ini
+++ b/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.sys.ini
@@ -5,4 +5,5 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_SYSTEM_RADICALMICRO_YOOTHEME = "System - Radical Micro - YOOtheme Pro"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>Radical Micro YOOtheme Pro - Markup plugin for YOOtheme Pro.</p>"
