--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   1.0.0
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -52,6 +52,7 @@ PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Описание"
 PLG_RADICALMICRO_PARAM_META_IMAGE = "Изображение"
 PLG_RADICALMICRO_PARAM_META_TYPE = "Тип контента"
 PLG_RADICALMICRO_PARAM_META_SITE = "Адрес сайта"
+PLG_RADICALMICRO_PARAM_META_CREATOR = "Автор контента"
 
 ; Groups
 
