--- a/plg_radicalmicro_image/language/ru-RU/ru-RU.plg_radicalmicro_image.ini
+++ b/plg_radicalmicro_image/language/ru-RU/ru-RU.plg_radicalmicro_image.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   1.0.0
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -10,6 +10,8 @@ PLG_RADICALMICRO_IMAGE_DESCRIPTION = "Расширение плагина Radica
 
 ; Params
 
+COM_PLUGINS_IMAGE_FIELDSET_LABEL = "Настройка изображения"
+
 PLG_RADICALMICRO_IMAGE_PARAM_SPACER_IMAGE = "Настройки изображения"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE = "Фиксированный размер изображения"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE_WIDTH = "Ширина"
@@ -18,7 +20,7 @@ PLG_RADICALMICRO_IMAGE_PARAM_POSITION = "Расположение заголов
 PLG_RADICALMICRO_IMAGE_PARAM_POSITION_TOP = "Верх"
 PLG_RADICALMICRO_IMAGE_PARAM_POSITION_MIDDLE = "Середина"
 PLG_RADICALMICRO_IMAGE_PARAM_POSITION_BOTTOM = "Низ"
-PLG_RADICALMICRO_IMAGE_PARAM_CACHE = "Папка изображений"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE = "Папка хранения изображений"
 PLG_RADICALMICRO_IMAGE_PARAM_CACHE_DESC = "Выбрать папку, где будут храниться сгенерированные изображения. Разница состоит в том, что папку Cache можно очистить из административной части сайта вместе со всем кешем."
 PLG_RADICALMICRO_IMAGE_PARAM_CACHE_IMAGES = "Images"
 PLG_RADICALMICRO_IMAGE_PARAM_CACHE_CACHE = "Cache"
