--- a/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   1.0.0
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -30,21 +30,25 @@ PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_ORGANIZATION_DESC = "Добав
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE = "Логотип"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE_DESC = "Логотип для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE = "Название"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE_DESC = "Название для разметки Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_TITLE_DESC = "Название организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY = "Страна"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY_DESC  = "Страна для разметки Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_COUNTRY_DESC  = "Страна организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY = "Город"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY_DESC = "Город для разметки Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_LOCALITY_DESC = "Город организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_REGION = "Штат/регион"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_REGION_DESC = "Штат/регион для разметки Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_REGION_DESC = "Штат/регион организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_ADDRESS = "Адрес"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_ADDRESS_DESC = "Адрес для разметки Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_ADDRESS_DESC = "Адрес организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_CODE = "Индекс"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_CODE_DESC = "Индекс для разметки Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_CODE_DESC = "Индекс адреса организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_POST = "Почтовый ящик"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_POST_DESC = "Почтовый ящик для разметки Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_POST_DESC = "Почтовый ящик для адресов абонентских ящиков организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_MAP = "Ссылка на карту"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_MAP_DESC = "Ссылка на карту для разметки Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_MAP_DESC = "Ссылка на карту с адресом организации для разметки типа Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_PHONE = "Телефон"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_PHONE_DESC = "Телефон организации для разметки типа Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_CONTACT_TYPE = "Контактное лицо"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_CONTACT_TYPE_DESC = "Контактное лицо организации для разметки типа Organization"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_BREADCRUMBLIST = "Разметка Breadcrumb List"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_BREADCRUMBLIST_DESC = "Добавить разметку Schema.org типа Breadcrumb List в дополнение к существующим разметкам"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE = "Основная разметка"
