--- a/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.json
+++ b/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.json
@@ -1,18 +1,24 @@
 {
-    "DatePublished": "Date Published",
-    "DateModified": "Date Modified",
-    "PrepTime": "Prep Time (minute)",
-    "CookTime": "Cook Time (minute)",
-    "TotalTime": "Total Time (minute)",
-    "Calories": "Calories",
-    "RecipeCategory": "Recipe Category",
-    "RecipeYield": "Recipe Yield",
-    "RecipeCuisine": "Recipe Cuisine",
-    "RecipeInstructions": "Recipe Instructions",
-    "RecipeIngredient": "Recipe Ingredient",
-    "Sku": "Sku",
-    "Mpn": "Mpn",
-    "Brand": "Brand",
-    "Currency": "Currency",
-    "Price": "Price"
+  "Title_og_twitter": "Title (OG, Twitter)",
+  "Description_og_twitter": "Description (OG, Twitter)",
+  "Image_og_twitter": "Image (OG, Twitter)",
+  "Type_og": "Type (OG)",
+  "Creator_twitter": "Creator/author (Twitter)",
+  "Site_twitter": "Сайт (Twitter)",
+  "DatePublished": "Publish date",
+  "DateModified": "Modified date",
+  "PrepTime": "Prep time, min.",
+  "CookTime": "Cooking time, min.",
+  "TotalTime": "Total time, min.",
+  "Calories": "Number of calories",
+  "RecipeCategory": "Type of dish",
+  "RecipeYield": "Number of servings",
+  "RecipeCuisine": "View cuisine of the world",
+  "RecipeInstructions": "Instruction",
+  "RecipeIngredient": "Ingredients",
+  "Sku": "Article",
+  "Mpn": "Manufacturer code",
+  "Brand": "Manufacturer",
+  "Currency": "Price",
+  "Price": "Currency"
 }
