--- a/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.json
+++ b/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.json
@@ -1,18 +1,24 @@
 {
-    "DatePublished": "Дата публикации",
-    "DateModified": "Дата изменения",
-    "PrepTime": "Время подготовки, мин.",
-    "CookTime": "Время приготовление, мин.",
-    "TotalTime": "Общее время, мин.",
-    "Calories": "Количество калорий",
-    "RecipeCategory": "Вид блюда",
-    "RecipeYield": "Количество порций",
-    "RecipeCuisine": "Вид кухни мира",
-    "RecipeInstructions": "Инструкция",
-    "RecipeIngredient": "Ингредиенты",
-    "Sku": "Артикул",
-    "Mpn": "Код производителя",
-    "Brand": "Производитель",
-    "Currency": "Цена",
-    "Price": "Валюта"
+  "Title_og_twitter": "Заголовок (OG, Twitter)",
+  "Description_og_twitter": "Описание (OG, Twitter)",
+  "Image_og_twitter": "Изображение (OG, Twitter)",
+  "Type_og": "Тип (OG, Twitter)",
+  "Creator_twitter": "Автор контента (Twitter)",
+  "Site_twitter": "Сайт (Twitter)",
+  "DatePublished": "Дата публикации",
+  "DateModified": "Дата изменения",
+  "PrepTime": "Время подготовки, мин.",
+  "CookTime": "Время приготовление, мин.",
+  "TotalTime": "Общее время, мин.",
+  "Calories": "Количество калорий",
+  "RecipeCategory": "Вид блюда",
+  "RecipeYield": "Количество порций",
+  "RecipeCuisine": "Вид кухни мира",
+  "RecipeInstructions": "Инструкция",
+  "RecipeIngredient": "Ингредиенты",
+  "Sku": "Артикул",
+  "Mpn": "Код производителя",
+  "Brand": "Производитель",
+  "Currency": "Цена",
+  "Price": "Валюта"
 }
