--- a/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.sys.ini
+++ b/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.sys.ini
@@ -1,9 +1,8 @@
 ; @package   pkg_radicalmicro
-; @version   1.0.0
+; @version   __DEPLOY_VERSION__
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PLG_SYSTEM_RADICALMICRO_YOOTHEME = "System - Radical Micro - YOOtheme Pro"
-PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>Radical Micro YOOtheme Pro - Markup plugin for YOOtheme Pro.</p>"
+; Coming soon
