Fixes languages #19, fix twitter creator #23

--- a/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   __DEPLOY_VERSION__
+; @version   0.2.1
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -45,13 +45,20 @@ PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECUISINE = "World Cuisine View"
 PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINSTRUCTIONS = "Instruction"
 PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINGREDIENT = "Ingredients"
 
+; Schema
+
+PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_SPACER = "Schema.org fields"
+PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_SPACER_DESC = "These fields are used for Schema.org layout. To get a list of fields, select the Schema.org type and save the settings. Then fill in the appropriate fields."
+PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_TYPE = "Schema.org type"
+
 ; Meta
 
 PLG_RADICALMICRO_PARAM_META_TITLE = "Title"
 PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Description"
 PLG_RADICALMICRO_PARAM_META_IMAGE = "Image"
 PLG_RADICALMICRO_PARAM_META_TYPE = "Content Type"
-PLG_RADICALMICRO_PARAM_META_SITE = "Site Address"
+PLG_RADICALMICRO_PARAM_META_SITE = "Site Twitter"
+PLG_RADICALMICRO_PARAM_META_CREATOR = "Content Twitter"
 
 ; Groups
 
@@ -59,3 +66,9 @@ PLG_RADICALMICRO_CONTENT_GROUP_CONTENT = "Content"
 PLG_RADICALMICRO_CONTENT_GROUP_EXTRA = "Extra"
 PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_NO_SELECT = "Not selected"
 PLG_RADICALMICRO_CONTENT_GROUP_FIELDS = "Content Fields"
+
+; Other
+
+COM_CONTENT_RADICALMICRO_META_FIELDSET_LABEL = "Radical Micro - Meta"
+COM_CONTENT_RADICALMICRO_SCHEMA_FIELDSET_LABEL = "Radical Micro - Schema.org"
+PLG_RADICALMICRO_CONTENT_PARAM_ENABLE = "Enable"
