--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   __DEPLOY_VERSION__
+; @version   0.2.1
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -45,14 +45,20 @@ PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECUISINE = "Вид кухни мира"
 PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINSTRUCTIONS = "Инструкция"
 PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINGREDIENT = "Ингредиенты"
 
+; Schema
+
+PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_SPACER = "Поля Schema.org"
+PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_SPACER_DESC = "Данные поля используются для разметки Schema.org. Для получения списка полей необходимо выбрать тип Schema.org и сохранить настройки. После чего заполнить соответствующие поля."
+PLG_RADICALMICRO_CONTENT_PARAM_SCHEMA_TYPE = "Тип Schema.org"
+
 ; Meta
 
 PLG_RADICALMICRO_PARAM_META_TITLE = "Заголовок"
 PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Описание"
 PLG_RADICALMICRO_PARAM_META_IMAGE = "Изображение"
 PLG_RADICALMICRO_PARAM_META_TYPE = "Тип контента"
-PLG_RADICALMICRO_PARAM_META_SITE = "Адрес сайта"
-PLG_RADICALMICRO_PARAM_META_CREATOR = "Автор контента"
+PLG_RADICALMICRO_PARAM_META_SITE = "Twitter сайта"
+PLG_RADICALMICRO_PARAM_META_CREATOR = "Twitter автора"
 
 ; Groups
 
@@ -60,3 +66,9 @@ PLG_RADICALMICRO_CONTENT_GROUP_CONTENT = "Материал"
 PLG_RADICALMICRO_CONTENT_GROUP_EXTRA = "Дополнительно"
 PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_NO_SELECT = "Не выбрано"
 PLG_RADICALMICRO_CONTENT_GROUP_FIELDS = "Поля материала"
+
+; Other
+
+COM_CONTENT_RADICALMICRO_META_FIELDSET_LABEL = "Radical Micro - Meta"
+COM_CONTENT_RADICALMICRO_SCHEMA_FIELDSET_LABEL = "Radical Micro - Schema.org"
+PLG_RADICALMICRO_CONTENT_PARAM_ENABLE = "Включить"
