--- a/plg_radicalmicro_menu/language/en-GB/en-GB.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/en-GB/en-GB.plg_radicalmicro_menu.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   __DEPLOY_VERSION__
+; @version   0.2.1
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -8,7 +8,7 @@
 PLG_RADICALMICRO_MENU = "Radical Micro - Menu"
 PLG_RADICALMICRO_MENU_DESCRIPTION = "Radical Micro Menu Item Plugin Extension"
 
-; params
+; Params
 
 PLG_RADICALMICRO_MENU_PARAM_ENABLE = "Enable"
 PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC = "By enabling this option, you can override the data that comes from provider plugins. Menu items take precedence over provider plugins."
@@ -19,9 +19,10 @@ PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TITLE = "Title"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_DESCRIPTION = "Description"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_IMAGE = "Image"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TYPE = "Type "
-PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_SITE = "Site"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_SITE = "Site Twitter"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_CREATOR = "Author Twitter"
 
-; schema
+; Schema
 
 PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER = "Schema.org Fields"
 PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER_DESC = "These fields are used for Schema.org layout. To get a list of fields, select the Schema.org type and save the settings. Then fill in the appropriate fields."
@@ -33,7 +34,7 @@ PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_DATEPUBLISHED = "Publication Dat
 PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_DATEMODIFIED = "Date Modified"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_AUTHOR = "Author"
 
-; product
+; Product
 
 PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_SKU = "SKU"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_MPN = "Manufacturer Code"
@@ -41,7 +42,7 @@ PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_BRAND = "Manufacturer"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_PRICE = "Price"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_CURRENCY = "Currency"
 
-; recipe
+; Recipe
 
 PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_PREPTIME = "Prep time min."
 PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_COOKTIME = "Cooking time, min."
