--- a/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
@@ -1,5 +1,5 @@
 ; @package   pkg_radicalmicro
-; @version   __DEPLOY_VERSION__
+; @version   0.2.1
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
@@ -19,7 +19,8 @@ PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TITLE = "Заголовок"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_DESCRIPTION = "Описание"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_IMAGE = "Изображение"
 PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TYPE = "Тип "
-PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_SITE = "Сайт"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_SITE = "Твиттер сайта"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_CREATOR = "Твиттер автора"
 
 ; Schema
 
