--- a/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.ini
+++ b/plg_system_radicalmicro_yootheme/language/en-GB/en-GB.plg_system_radicalmicro_yootheme.ini
@@ -1,8 +1,14 @@
 ; @package   pkg_radicalmicro
-; @version   __DEPLOY_VERSION__
+; @version   0.2.1
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-; Coming soon
+PLG_SYSTEM_RADICALMICRO_YOOTHEME = "System - Radical Micro - YOOtheme Pro"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>Extended Radical Micro plugin for Yootheme Pro.</p>"
+
+; Text
+
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_TYPE = "Schema.org type"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_SETTINGS = "Settings"
