--- a/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.sys.ini
+++ b/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.sys.ini
@@ -1,9 +1,9 @@
 ; @package   pkg_radicalmicro
-; @version   __DEPLOY_VERSION__
+; @version   0.2.1
 ; @author    Dmitriy Vasyukov - https://fictionlabs.ru
 ; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
 PLG_SYSTEM_RADICALMICRO_YOOTHEME = "Система - Radical Micro - YOOtheme Pro"
-PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>Radical Micro YOOtheme Pro - плагин микроразметки RadicalMicro для Yootheme Pro.</p>"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>Radical Micro YOOtheme Pro - плагин микроразметки Radical Micro для Yootheme Pro.</p>"
